# SmartHRT

./: README.md  dashboard.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
ADR/: 019-restauration-etat-apres-redemarrage.yaml  026-extraction-modele-thermique-pure-python.yaml  027-heritage-dataupdatecoordinator.yaml  028-modernisation-strenum-machine-etats.yaml  029-validation-donnees-pydantic.yaml  030-simplification-sensors-entity-description.yaml  031-optimisation-algorithmique-resolution.yaml  032-validation-config-flow-contraintes.yaml  033-decouplage-logique-etat-pattern-state.yaml  034-gestion-centralisee-effets-bord-callbacks.yaml  035-immutabilite-etat-transitions-atomiques.yaml  036-factorisation-setters-generiques.yaml  037-suppression-polling-periodique-minute.yaml  038-separation-configuration-etat-dynamique.yaml  039-simplification-restauration-auto-correctrice.yaml  040-delegation-flags-machine-etats.yaml  041-serialisation-as-dict-from-dict.yaml  042-centralisation-pilotage-facade-coordinator.yaml  043-reduction-surface-exposition-services.yaml  044-protection-valeurs-aberrantes-apprentissage.yaml  045-validation-pydantic-runtime-configuration.yaml  046-atomisation-effets-bord-pattern-command.yaml  048-execution-synchrone-calculs-thermiques-legers.yaml  049-suppression-forcage-etat-transitions-explicites.yaml  050-securisation-calculs-gardes-physiques.yaml  051-centralisation-gestion-timers.yaml  052-internationalisation-native-i18n.yaml
docs/: GUIDE.md
tests/: __init__.py  conftest.py  test_integration_log_scenario.py  (+12 more)
(+24 files in other folders)
