[project]
name = "hass-template-climate"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = ["colorlog>=6.9.0", "homeassistant>=2026.2.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::RuntimeWarning:custom_components.SmartHRT.coordinator",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.19",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]
